Adicionei função para puxar dados varias ações

--- a/Testes.ipynb
+++ b/Testes.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#Para instalar bibliotecas\n",
+    "#pip install nome_da_biblioteca"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -10,7 +22,8 @@
     "from datetime import date\n",
     "import yfinance as yf\n",
     "yf.pdr_override()\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -24,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +242,7 @@
        "[81 rows x 6 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,6 +250,104 @@
    "source": [
     "data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from pandas_datareader import data as wb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BIDI11.SA\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "                 Open       High        Low      Close  Adj Close  Volume\n",
+      "Date                                                                     \n",
+      "2019-07-19  43.400002  43.900002  41.700001  42.689999  42.689999  930300\n",
+      "2019-07-22  43.410000  44.330002  41.299999  43.200001  43.200001  613000\n",
+      "2019-07-23  42.939999  42.939999  41.400002  42.599998  42.599998  566300\n",
+      "2019-07-24  42.450001  43.240002  41.700001  42.830002  42.830002  519700\n",
+      "2019-07-25  42.900002  43.000000  41.980000  42.500000  42.500000  401200\n",
+      "...               ...        ...        ...        ...        ...     ...\n",
+      "2020-07-17  50.490002  51.349998  50.320000  50.799999  50.799999  578700\n",
+      "2020-07-20  50.990002  51.740002  50.610001  51.400002  51.400002  543700\n",
+      "2020-07-21  51.389999  52.799999  51.180000  52.730000  52.730000  592800\n",
+      "2020-07-22  52.889999  54.779999  52.139999  54.490002  54.490002  586400\n",
+      "2020-07-23  54.000000  55.209999  52.490002  53.470001  53.470001  513700\n",
+      "\n",
+      "[252 rows x 6 columns]\n",
+      "\n",
+      "\n",
+      "WEGE3.SA\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "                 Open       High        Low      Close  Adj Close      Volume\n",
+      "Date                                                                         \n",
+      "2018-01-02  18.730801  19.361500  18.730801  19.246201  18.523153   2406430.0\n",
+      "2018-01-03  19.153799  19.192301  18.915400  18.953800  18.241739   2326480.0\n",
+      "2018-01-04  19.061501  19.169201  18.769199  18.769199  18.064072   1658800.0\n",
+      "2018-01-05  18.938499  18.961500  18.684601  18.846201  18.138184   1276340.0\n",
+      "2018-01-08  18.853800  19.115400  18.507700  19.000000  18.286203   1673100.0\n",
+      "...               ...        ...        ...        ...        ...         ...\n",
+      "2020-07-17  55.029999  58.459999  54.700001  58.090000  58.090000   6470700.0\n",
+      "2020-07-20  58.400002  60.160000  58.200001  60.160000  60.160000   5236000.0\n",
+      "2020-07-21  60.500000  61.029999  59.009998  59.880001  59.880001   5063300.0\n",
+      "2020-07-22  62.700001  68.900002  62.509998  68.199997  68.199997  17764000.0\n",
+      "2020-07-23  68.000000  69.800003  66.610001  66.980003  66.980003   9774900.0\n",
+      "\n",
+      "[632 rows x 6 columns]\n",
+      "\n",
+      "\n",
+      "ITSA4.SA\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "                Open     High       Low    Close  Adj Close    Volume\n",
+      "Date                                                                 \n",
+      "2018-01-02   9.88182  10.0273   9.86364  10.0273   8.509640  14040950\n",
+      "2018-01-03   9.98182  10.1818   9.94545  10.1455   8.609951  13498870\n",
+      "2018-01-04  10.17270  10.3636  10.15450  10.3364   8.771956  14303520\n",
+      "2018-01-05  10.33640  10.3545  10.22730  10.3545   8.787320  10845010\n",
+      "2018-01-08  10.30000  10.3455  10.25450  10.3455   8.779679  11024750\n",
+      "...              ...      ...       ...      ...        ...       ...\n",
+      "2020-07-17  10.19000  10.3300  10.16000  10.2700  10.270000  20885300\n",
+      "2020-07-20  10.30000  10.4800  10.22000  10.4200  10.420000  28905900\n",
+      "2020-07-21  10.50000  10.6300  10.47000  10.5200  10.520000  26798100\n",
+      "2020-07-22  10.57000  10.7400  10.42000  10.5200  10.520000  67799300\n",
+      "2020-07-23  10.53000  10.5800  10.35000  10.3700  10.370000  29756100\n",
+      "\n",
+      "[631 rows x 6 columns]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "meuvetor = [\"BIDI11.SA\",\"WEGE3.SA\",\"ITSA4.SA\"]\n",
+    "def passa_os_dados(meuvetor):\n",
+    "    for item in meuvetor:\n",
+    "        print(item)\n",
+    "        print(wb.DataReader(item, data_source='yahoo', start='2018-1-1'))\n",
+    "        print(\"\\n\")\n",
+    "        \n",
+    "passa_os_dados(meuvetor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
